Add models, serializers, and views for Expense and Split; register in admin and configure URLs - Integrated split option - Integrated frontend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "splitwise-backend"
+name = "splitfree-backend"
 version = "0.1.0"
 description = ""
 authors = [
@@ -10,11 +10,15 @@ requires-python = ">=3.13"
 dependencies = [
     "django (>=5.2,<6.0)",
     "djangorestframework (>=3.16.0,<4.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "requests (>=2.32.3,<3.0.0)",
+    "dj-rest-auth (>=7.0.1,<8.0.0)",
+    "django-allauth (>=65.7.0,<66.0.0)",
+    "django-cors-headers (>=4.3.1,<5.0.0)"
 ]
 
 [tool.poetry]
-packages = [{include = "splitwise_backend", from = "src"}]
+packages = [{include = "splitfree_backend"}]
 
 
 [tool.poetry.group.dev.dependencies]
