--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,9 @@ dependencies = [
     "requests (>=2.32.3,<3.0.0)",
     "dj-rest-auth (>=7.0.1,<8.0.0)",
     "django-allauth (>=65.7.0,<66.0.0)",
-    "django-cors-headers (>=4.3.1,<5.0.0)"
+    "django-cors-headers (>=4.3.1,<5.0.0)",
+    "firebase-admin (>=6.7.0,<7.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)"
 ]
 
 [tool.poetry]
