--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "django-allauth (>=65.7.0,<66.0.0)",
     "django-cors-headers (>=4.3.1,<5.0.0)",
     "firebase-admin (>=6.7.0,<7.0.0)",
-    "gunicorn (>=23.0.0,<24.0.0)"
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "psycopg[binary] (>=3.2.6,<4.0.0)"
 ]
 
 [tool.poetry]
