--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ requests-toolbelt==1.0.0
 rsa==4.2
 shellingham==1.5.4
 sniffio==1.3.1
--e git+https://github.com/rishiqwerty/splitfree.git@df4f7a145734978b284500f3be3ef6d09b825186#egg=splitfree_backend
+# -e git+https://github.com/rishiqwerty/splitfree.git@df4f7a145734978b284500f3be3ef6d09b825186#egg=splitfree_backend
 sqlparse==0.5.3
 tomlkit==0.13.2
 trove-classifiers==2025.4.11.15
