--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "django-cors-headers (>=4.3.1,<5.0.0)",
     "firebase-admin (>=6.7.0,<7.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "psycopg[binary] (>=3.2.6,<4.0.0)"
+    "psycopg[binary] (>=3.2.6,<4.0.0)",
+    "dj-database-url (>=2.3.0,<3.0.0)"
 ]
 
 [tool.poetry]
