--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click==8.1.8
 crashtest==0.4.1
 cryptography==44.0.2
 distlib==0.3.9
+dj-database-url==2.3.0
 dj-rest-auth==7.0.1
 Django==5.2
 django-allauth==65.7.0
@@ -60,6 +61,8 @@ poetry==2.1.2
 poetry-core==2.1.2
 proto-plus==1.26.1
 protobuf==5.29.4
+psycopg==3.2.6
+psycopg-binary==3.2.6
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -75,10 +78,11 @@ requests-toolbelt==1.0.0
 rsa==4.2
 shellingham==1.5.4
 sniffio==1.3.1
-# -e git+https://github.com/rishiqwerty/splitfree.git@df4f7a145734978b284500f3be3ef6d09b825186#egg=splitfree_backend
+# -e git+https://github.com/rishiqwerty/splitfree.git@57fb133f6af7dda6de482e1e76e6ac680d2f57dd#egg=splitfree_backend
 sqlparse==0.5.3
 tomlkit==0.13.2
 trove-classifiers==2025.4.11.15
+typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
 virtualenv==20.30.0
