--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,11 @@ dependencies = [
     "firebase-admin (>=6.7.0,<7.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "psycopg[binary] (>=3.2.6,<4.0.0)",
-    "dj-database-url (>=2.3.0,<3.0.0)"
+    "dj-database-url (>=2.3.0,<3.0.0)",
+    "transformers (>=4.51.3,<5.0.0)",
+    "torch (>=2.7.0,<3.0.0)",
+    "sentence-transformers (>=4.1.0,<5.0.0)",
+    "rapidfuzz (>=3.13.0,<4.0.0)"
 ]
 
 [tool.poetry]
