--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "transformers (>=4.51.3,<5.0.0)",
     "torch (>=2.7.0,<3.0.0)",
     "sentence-transformers (>=4.1.0,<5.0.0)",
-    "rapidfuzz (>=3.13.0,<4.0.0)"
+    "rapidfuzz (>=3.13.0,<4.0.0)",
+    "google-genai (>=1.12.1,<2.0.0)"
 ]
 
 [tool.poetry]
