--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
 black==25.1.0
@@ -24,6 +25,7 @@ filelock==3.18.0
 findpython==0.6.3
 firebase-admin==6.7.0
 flake8==7.2.0
+fsspec==2025.3.2
 google-api-core==2.24.2
 google-api-python-client==2.167.0
 google-auth==2.39.0
@@ -32,29 +34,38 @@ google-cloud-core==2.4.3
 google-cloud-firestore==2.20.2
 google-cloud-storage==3.1.0
 google-crc32c==1.7.1
+google-genai==1.12.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
 grpcio-status==1.71.0
 gunicorn==23.0.0
-h11==0.14.0
-httpcore==1.0.8
+h11==0.16.0
+httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
+huggingface-hub==0.30.2
 idna==3.10
 installer==0.7.0
 isort==6.0.1
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
+Jinja2==3.1.6
+joblib==1.4.2
 keyring==25.6.0
+MarkupSafe==3.0.2
 mccabe==0.7.0
 more-itertools==10.6.0
+mpmath==1.3.0
 msgpack==1.1.0
 mypy-extensions==1.0.0
+networkx==3.4.2
+numpy==2.2.5
 packaging==25.0
 pathspec==0.12.1
 pbs-installer==2025.4.9
+pillow==11.2.1
 pkginfo==1.12.1.2
 platformdirs==4.3.7
 poetry==2.1.2
@@ -68,23 +79,40 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycodestyle==2.13.0
 pycparser==2.22
+pydantic==2.11.3
+pydantic_core==2.33.1
 pyflakes==3.3.2
 PyJWT==2.10.1
 pyparsing==3.2.3
 pyproject_hooks==1.2.0
+PyYAML==6.0.2
 RapidFuzz==3.13.0
+regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rsa==4.2
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.1.0
+setuptools==79.0.1
 shellingham==1.5.4
 sniffio==1.3.1
-# -e git+https://github.com/rishiqwerty/splitfree.git@57fb133f6af7dda6de482e1e76e6ac680d2f57dd#egg=splitfree_backend
+-e git+https://github.com/rishiqwerty/splitfree.git@90ebad665ae554fec7d3833b4c831e41da7093d0#egg=splitfree_backend
 sqlparse==0.5.3
+sympy==1.13.3
+threadpoolctl==3.6.0
+tokenizers==0.21.1
 tomlkit==0.13.2
+torch==2.7.0
+tqdm==4.67.1
+transformers==4.51.3
 trove-classifiers==2025.4.11.15
+typing-inspection==0.4.0
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
 virtualenv==20.30.0
+websockets==15.0.1
 xattr==1.1.4
 zstandard==0.23.0
