--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,8 @@ dependencies = [
     "torch (>=2.7.0,<3.0.0)",
     "sentence-transformers (>=4.1.0,<5.0.0)",
     "rapidfuzz (>=3.13.0,<4.0.0)",
-    "google-genai (>=1.12.1,<2.0.0)"
+    "google-genai (>=1.12.1,<2.0.0)",
+    "pre-commit (>=4.2.0,<5.0.0)"
 ]
 
 [tool.poetry]
