--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 annotated-types==0.7.0
 anyio==4.9.0
 asgiref==3.8.1
+attrs==25.3.0
 black==25.1.0
 build==1.2.2.post1
 CacheControl==0.14.2
 cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
+cfgv==3.4.0
 charset-normalizer==3.4.1
 cleo==2.1.0
 click==8.1.8
@@ -19,6 +21,8 @@ Django==5.2
 django-allauth==65.7.0
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+drf-spectacular==0.28.0
+drf-spectacular-sidecar==2025.4.1
 dulwich==0.22.8
 fastjsonschema==2.21.1
 filelock==3.18.0
@@ -45,7 +49,10 @@ httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
 huggingface-hub==0.30.2
+identify==2.6.10
 idna==3.10
+inflection==0.5.1
+iniconfig==2.1.0
 installer==0.7.0
 isort==6.0.1
 jaraco.classes==3.4.0
@@ -53,6 +60,8 @@ jaraco.context==6.0.1
 jaraco.functools==4.1.0
 Jinja2==3.1.6
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
 keyring==25.6.0
 MarkupSafe==3.0.2
 mccabe==0.7.0
@@ -61,6 +70,7 @@ mpmath==1.3.0
 msgpack==1.1.0
 mypy-extensions==1.0.0
 networkx==3.4.2
+nodeenv==1.9.1
 numpy==2.2.5
 packaging==25.0
 pathspec==0.12.1
@@ -68,8 +78,10 @@ pbs-installer==2025.4.9
 pillow==11.2.1
 pkginfo==1.12.1.2
 platformdirs==4.3.7
+pluggy==1.5.0
 poetry==2.1.2
 poetry-core==2.1.2
+pre_commit==4.2.0
 proto-plus==1.26.1
 protobuf==5.29.4
 psycopg==3.2.6
@@ -85,11 +97,15 @@ pyflakes==3.3.2
 PyJWT==2.10.1
 pyparsing==3.2.3
 pyproject_hooks==1.2.0
+pytest==8.3.5
+pytest-django==4.11.1
 PyYAML==6.0.2
 RapidFuzz==3.13.0
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
+rpds-py==0.24.0
 rsa==4.2
 safetensors==0.5.3
 scikit-learn==1.6.1
@@ -98,6 +114,7 @@ sentence-transformers==4.1.0
 setuptools==79.0.1
 shellingham==1.5.4
 sniffio==1.3.1
+-e git+https://github.com/rishiqwerty/splitfree.git@364c96c8ade12c37b5efc88eb365a4a39be6b8ce#egg=splitfree_backend
 sqlparse==0.5.3
 sympy==1.13.3
 threadpoolctl==3.6.0
