--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,6 @@ filelock==3.18.0
 findpython==0.6.3
 firebase-admin==6.7.0
 flake8==7.2.0
-fsspec==2025.3.2
 google-api-core==2.24.2
 google-api-python-client==2.167.0
 google-auth==2.39.0
@@ -48,7 +47,6 @@ h11==0.16.0
 httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
-huggingface-hub==0.30.2
 identify==2.6.10
 idna==3.10
 inflection==0.5.1
@@ -58,24 +56,17 @@ isort==6.0.1
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
-Jinja2==3.1.6
-joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 keyring==25.6.0
-MarkupSafe==3.0.2
 mccabe==0.7.0
 more-itertools==10.6.0
-mpmath==1.3.0
 msgpack==1.1.0
 mypy-extensions==1.0.0
-networkx==3.4.2
 nodeenv==1.9.1
-numpy==2.2.5
 packaging==25.0
 pathspec==0.12.1
 pbs-installer==2025.4.9
-pillow==11.2.1
 pkginfo==1.12.1.2
 platformdirs==4.3.7
 pluggy==1.5.0
@@ -102,26 +93,15 @@ pytest-django==4.11.1
 PyYAML==6.0.2
 RapidFuzz==3.13.0
 referencing==0.36.2
-regex==2024.11.6
 requests==2.32.3
 requests-toolbelt==1.0.0
 rpds-py==0.24.0
-rsa==4.7
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
-sentence-transformers==4.1.0
-setuptools==79.0.1
+rsa==4.2
 shellingham==1.5.4
 sniffio==1.3.1
+-e git+https://github.com/rishiqwerty/splitfree.git@2373e8dbb1ce62a16383b7c2119a15508d823ec4#egg=splitfree_backend
 sqlparse==0.5.3
-sympy==1.13.3
-threadpoolctl==3.6.0
-tokenizers==0.21.1
 tomlkit==0.13.2
-torch==2.7.0
-tqdm==4.67.1
-transformers==4.51.3
 trove-classifiers==2025.4.11.15
 typing-inspection==0.4.0
 typing_extensions==4.13.2
