--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,12 @@ asgiref==3.8.1
 attrs==25.3.0
 black==25.1.0
 build==1.2.2.post1
-CacheControl==0.14.2
+CacheControl==0.14.3
 cachetools==5.5.2
-certifi==2025.1.31
+certifi==2025.4.26
 cffi==1.17.1
 cfgv==3.4.0
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
 cleo==2.1.0
 click==8.1.8
 crashtest==0.4.1
@@ -22,22 +22,22 @@ django-allauth==65.7.0
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 drf-spectacular==0.28.0
-drf-spectacular-sidecar==2025.4.1
+drf-spectacular-sidecar==2025.5.1
 dulwich==0.22.8
 fastjsonschema==2.21.1
 filelock==3.18.0
 findpython==0.6.3
-firebase-admin==6.7.0
+firebase-admin==6.8.0
 flake8==7.2.0
 google-api-core==2.24.2
-google-api-python-client==2.167.0
+google-api-python-client==2.169.0
 google-auth==2.39.0
 google-auth-httplib2==0.2.0
 google-cloud-core==2.4.3
 google-cloud-firestore==2.20.2
 google-cloud-storage==3.1.0
 google-crc32c==1.7.1
-google-genai==1.12.1
+google-genai==1.13.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.71.0
@@ -62,7 +62,7 @@ keyring==25.6.0
 mccabe==0.7.0
 more-itertools==10.6.0
 msgpack==1.1.0
-mypy-extensions==1.0.0
+mypy_extensions==1.1.0
 nodeenv==1.9.1
 packaging==25.0
 pathspec==0.12.1
@@ -75,15 +75,15 @@ poetry-core==2.1.2
 pre_commit==4.2.0
 proto-plus==1.26.1
 protobuf==5.29.4
-psycopg==3.2.6
-psycopg-binary==3.2.6
+psycopg==3.2.7
+psycopg-binary==3.2.7
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycodestyle==2.13.0
 pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
+pydantic==2.11.4
+pydantic_core==2.33.2
 pyflakes==3.3.2
 PyJWT==2.10.1
 pyparsing==3.2.3
@@ -99,7 +99,6 @@ rpds-py==0.24.0
 rsa==4.2
 shellingham==1.5.4
 sniffio==1.3.1
--e git+https://github.com/rishiqwerty/splitfree.git@2373e8dbb1ce62a16383b7c2119a15508d823ec4#egg=splitfree_backend
 sqlparse==0.5.3
 tomlkit==0.13.2
 trove-classifiers==2025.4.11.15
