--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,7 @@ env:
   LOCAL_LLM_URL: http://localhost:11434/api/generate
   LLM_MODEL: codellama
   USE_SQLITE: true
+  GEMINI_API_KEY: dummykey
 
 on:
   push:
