--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,7 +16,7 @@ env:
   USE_SQLITE: true
   GEMINI_API_KEY: dummykey
   FIREBASE_CREDENTIALS : dummy.json
-  FIREBASE_CREDENTIALS_B64 : testioi
+  FIREBASE_CREDENTIALS_B64 : eyJ0eXBlIjogInNlcnZpY2VfYWNjb3VudCIsICJwcm9qZWN0X2lkIjogImR1bW15LXByb2plY3QiLCAicHJpdmF0ZV9rZXlfaWQiOiAic29tZV9rZXlfaWQiIH0
 
 
 on:
