--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,7 +26,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -44,9 +44,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Migrations
-      run: |
-       python manage.py migrate
+    # - name: Run Migrations
+    #   run: |
+    #    python manage.py migrate
     - name: Run Tests
       run: |
         python manage.py test
