update workflow file
update auth test

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,20 +1,21 @@
 name: Django CI
 
 env:
-  
-SECRET_KEY=""
-DB_ENGINE="django.db.backends.postgresql"
-DB_HOST="db.dfbvdfbvdf.supabase.co"
-DB_PORT="5432"
-DB_NAME="postgres"
-DB_USER="postgres"
-DB_PASSWORD="dfgfgfdgfdgfdg"
-DB_OPTIONS="require"
+  SECRET_KEY: asd
+  DB_ENGINE: django.db.backends.postgresql
+  DB_HOST: db.dfbvdfbvdf.supabase.co
+  DB_PORT: 5432
+  DB_NAME: postgres
+  DB_USER: postgres
+  DB_PASSWORD: dfgfgfdgfdgfdg
+  DB_OPTIONS: require
 
-USE_LOCAL_LLM=false
-LOCAL_LLM_URL=http://localhost:11434/api/generate
-LLM_MODEL=codellama
-USE_SQLITE=true
+  USE_LOCAL_LLM: false
+  LOCAL_LLM_URL: http://localhost:11434/api/generate
+  LLM_MODEL: codellama
+  USE_SQLITE: true
+  GEMINI_API_KEY: dummykey
+
 
 on:
   push:
@@ -23,7 +24,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -41,9 +42,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Migrations
-      run: |
-       python manage.py migrate
+    # - name: Run Migrations
+    #   run: |
+    #    python manage.py migrate
     - name: Run Tests
       run: |
         python manage.py test
