--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,9 +42,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    # - name: Run Migrations
-    #   run: |
-    #    python manage.py migrate
+    - name: Run precommit hooks
+      run: |
+        pre-commit run --all-files
     - name: Run Tests
       run: |
         python manage.py test
