Add Zappa and various dependencies; update requirements
- Added "zappa" dependency to pyproject.toml and requirements.txt.
- Updated requirements.txt with new dependencies: argcomplete, boto3, botocore, cfn-flip, durationpy, hjson, jmespath, kappa, MarkupSafe, placebo, python-dateutil, python-slugify, s3transfer, six, text-unidecode, toml, tqdm, troposphere, Werkzeug, and wheel.
- Ensured compatibility with existing dependencies by specifying version ranges where applicable.
- not using docker for serverless deployment in aws because of gunicorn issue.

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,20 +3,22 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      docker: 18
-  pre_build:
+      python: 3.13
     commands:
-      - echo Logging in to Amazon ECR...
-      - $(aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 576394207135.dkr.ecr.eu-north-1.amazonaws.com/splitfree)
+      - pip install --upgrade pip
+      - pip install -r requirements.txt
+      - pip install zappa
   build:
     commands:
-      - echo Building the Docker image...
-      - docker build -t splitfree .
-      - docker tag splitfree:latest 576394207135.dkr.ecr.eu-north-1.amazonaws.com/splitfree:latest
-  post_build:
-    commands:
-      - echo Pushing the Docker image to Amazon ECR...
-      - docker push 576394207135.dkr.ecr.eu-north-1.amazonaws.com/splitfree:latest
+      - echo Checking for existing Zappa deployment...
+      - |
+        if zappa status production | grep -q "API Gateway URL"; then
+          echo "Deployment exists. Running zappa update..."
+          zappa update production
+        else
+          echo "No existing deployment. Running zappa deploy..."
+          zappa deploy production --yes
+        fi
 artifacts:
   files:
     - '**/*'
