--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 annotated-types==0.7.0
 anyio==4.9.0
+argcomplete==3.6.2
 asgiref==3.8.1
 attrs==25.3.0
 black==25.1.0
+boto3==1.38.13
+botocore==1.38.13
 build==1.2.2.post1
 CacheControl==0.14.3
 cachetools==5.5.2
 certifi==2025.4.26
 cffi==1.17.1
 cfgv==3.4.0
+cfn-flip==1.3.0
 charset-normalizer==3.4.2
 cleo==2.1.0
 click==8.1.8
@@ -24,6 +28,7 @@ djangorestframework==3.16.0
 drf-spectacular==0.28.0
 drf-spectacular-sidecar==2025.5.1
 dulwich==0.22.8
+durationpy==0.9
 fastjsonschema==2.21.1
 filelock==3.18.0
 findpython==0.6.3
@@ -44,6 +49,7 @@ grpcio==1.71.0
 grpcio-status==1.71.0
 gunicorn==23.0.0
 h11==0.16.0
+hjson==3.1.0
 httpcore==1.0.9
 httplib2==0.22.0
 httpx==0.28.1
@@ -56,9 +62,12 @@ isort==6.0.1
 jaraco.classes==3.4.0
 jaraco.context==6.0.1
 jaraco.functools==4.1.0
+jmespath==1.0.1
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
+kappa==0.6.0
 keyring==25.6.0
+MarkupSafe==3.0.2
 mccabe==0.7.0
 more-itertools==10.6.0
 msgpack==1.1.0
@@ -68,6 +77,7 @@ packaging==25.0
 pathspec==0.12.1
 pbs-installer==2025.4.9
 pkginfo==1.12.1.2
+placebo==0.9.0
 platformdirs==4.3.7
 pluggy==1.5.0
 poetry==2.1.2
@@ -90,6 +100,8 @@ pyparsing==3.2.3
 pyproject_hooks==1.2.0
 pytest==8.3.5
 pytest-django==4.11.1
+python-dateutil==2.9.0.post0
+python-slugify==8.0.4
 PyYAML==6.0.2
 RapidFuzz==3.13.0
 referencing==0.36.2
@@ -97,10 +109,17 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rpds-py==0.24.0
 rsa==4.2
+s3transfer==0.12.0
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
+-e git+https://github.com/rishiqwerty/splitfree.git@0a57e931d8f10c53c8b45f0929fe8f86f804d83b#egg=splitfree_backend
 sqlparse==0.5.3
+text-unidecode==1.3
+toml==0.10.2
 tomlkit==0.13.2
+tqdm==4.67.1
+troposphere==4.9.2
 trove-classifiers==2025.4.11.15
 typing-inspection==0.4.0
 typing_extensions==4.13.2
@@ -108,5 +127,8 @@ uritemplate==4.1.1
 urllib3==2.4.0
 virtualenv==20.30.0
 websockets==15.0.1
+Werkzeug==3.1.3
+wheel==0.45.1
 xattr==1.1.4
+zappa==0.59.0
 zstandard==0.23.0
