--- a/.github/workflows/zappa_deploy.yml
+++ b/.github/workflows/zappa_deploy.yml
@@ -20,9 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install zappa  # Install Zappa to deploy
+            python -m pip install --upgrade pip
+            pip install setuptools wheel
+            pip install -r requirements.txt
 
       - name: Configure AWS CLI
         run: |
