--- a/.github/workflows/zappa_deploy.yml
+++ b/.github/workflows/zappa_deploy.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: |
+            python -m venv venv
+            source venv/bin/activate
+
             python -m pip install --upgrade pip
             pip install setuptools wheel
             pip install -r requirements.txt
