--- a/.github/workflows/zappa_deploy.yml
+++ b/.github/workflows/zappa_deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Deploy with Zappa
         run: |
-          zappa deploy production  # This will deploy to the production stage
+          source venv/bin/activate && zappa deploy production  # This will deploy to the production stage
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
