--- a/.github/workflows/zappa_deploy.yml
+++ b/.github/workflows/zappa_deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
             python -m pip install --upgrade pip
             pip install setuptools wheel
-            pip install -r requirements.txt
+            pip install -r requirements_prod.txt
 
       - name: Configure AWS CLI
         run: |
