--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -15,20 +15,17 @@
       "manage_roles": false,
       "slim_handler": true,
       "exclude": [
-        "*.gz",
-        "*.rar",
-        "*.zip",
-        "*.tar",
-        "tests",
-        "__pycache__",
+        "test_*.py",
+        "*.pyc",
         "node_modules",
-        "static",
         "media",
         ".git",
         ".vscode",
         ".direnv",
         ".env",
-        ".envrc"
+        ".envrc",
+        "venv",
+        ".venv"
       ]
 
     }
